remediation/network-ec2-vpc/fix-prowler_ec2_networkacl_allow_ingress_tcp_port_3389_arn_aws_ec2_sa_east_1_132410971304_network_acl_acl_074c16100af0e8622_sa_east_1.tf
resource "aws_network_acl_rule" "fix_network_acl_ingress_deny_25df96b8f7" {
  network_acl_id = "acl-074c16100af0e8622"
  egress         = false
  rule_number    = 252
  protocol       = "6"
  rule_action    = "deny"
  cidr_block     = "0.0.0.0/0"
  from_port      = 3389
  to_port        = 3389
  lifecycle {
    ignore_changes = [icmp_type, icmp_code]
  }
}
